--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="5dp"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ui.MainActivity">
+    android:layout_height="match_parent"
+    tools:context=".ui.MainActivity"
+    android:background="@android:color/white">
 
     <ImageView
         android:layout_width="match_parent"
@@ -21,7 +20,9 @@
         android:text="Your Adventure"
         android:id="@+id/buttonSubmit"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textColor="#FF0BB9F3"
+        android:background="@android:color/white" />
 
     <EditText
         android:layout_width="match_parent"
